Bug 135291 - Mistake in kig string - "This is a XFig file, not a Cabri figure."
Summary: Mistake in kig string - "This is a XFig file, not a Cabri figure."
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Pino Toscano
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-08 15:07 UTC by Hobbsee
Modified: 2006-10-24 22:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hobbsee 2006-10-08 15:07:28 UTC
Version:           unknown (using KDE 3.5.5, Kubuntu (edgy) 4:3.5.5-0ubuntu1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.17-10-generic

"This is a XFig file, not a Cabri figure."
should be
"This is an XFig file, not a Cabri figure."

Patch at http://librarian.launchpad.net/4704684/kig-string.patch

More info at:  https://launchpad.net/distros/ubuntu/+source/kdeedu/+bug/64685
Comment 1 Pino Toscano 2006-10-24 22:59:13 UTC
SVN commit 598858 by pino:

Typo fix.

CCBUG: 135291


 M  +1 -1      cabri-filter.cc  


--- branches/KDE/3.5/kdeedu/kig/filters/cabri-filter.cc #598857:598858
@@ -306,7 +306,7 @@
   {
     if ( s.left( 5 ) == "#FIG " )
     {
-      notSupported( file, i18n( "This is a XFig file, not a Cabri figure." ) );
+      notSupported( file, i18n( "This is an XFig file, not a Cabri figure." ) );
       return 0;
     }
     else
Comment 2 Pino Toscano 2006-10-24 22:59:29 UTC
SVN commit 598859 by pino:

Typo fix.

CCBUG: 135291


 M  +1 -1      cabri-filter.cc  


--- branches/kig/post-kde-3.5/kig/filters/cabri-filter.cc #598858:598859
@@ -152,7 +152,7 @@
   {
     if ( s.startsWith( "#FIG " ) )
     {
-      notSupported( file, i18n( "This is a XFig file, not a Cabri figure." ) );
+      notSupported( file, i18n( "This is an XFig file, not a Cabri figure." ) );
       return 0;
     }
     else
Comment 3 Pino Toscano 2006-10-24 22:59:56 UTC
SVN commit 598860 by pino:

Typo fix.

BUG: 135291


 M  +1 -1      cabri-filter.cc  


--- trunk/KDE/kdeedu/kig/filters/cabri-filter.cc #598859:598860
@@ -152,7 +152,7 @@
   {
     if ( s.startsWith( "#FIG " ) )
     {
-      notSupported( file, i18n( "This is a XFig file, not a Cabri figure." ) );
+      notSupported( file, i18n( "This is an XFig file, not a Cabri figure." ) );
       return 0;
     }
     else