Typo fix.

BUG: 135291

svn path=/trunk/KDE/kdeedu/kig/; revision=598860